k8s/002-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: semantic-gateway

spec:
  ports:
    - port: 8205
      name: sg
      protocol: TCP
  selector:
    app: semantic-gateway
